# gameEngine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  EditorGUI.h  EditorGui.cpp  Entity.h  Material.h  SDFPhys.cpp  SDFPhys.h  SceneData.cpp  SceneData.h  Transform.cpp  Transform.h  TriangleMesh.cpp  TriangleMesh.h  app.cpp  app.h  buffers.cpp  buffers.h  commands.h  config.h  descriptors.h  device.h  engine.cpp  engine.h  frame.h  framebuffer.h  imgui.ini  instance.h  main.cpp  mesh.h  meshUniforms.h  pipeline.h  queue_families.h  render_structs.h  scene.cpp  scene.h  shaders.h  swapchain.h
src/shaders/: fragment.spv  shader.frag  shader.vert  shader_compile.bat  shader_raymarch.frag  shader_raymarch.vert  vertex.spv
